; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_listall.c_test_refs_listall__from_repository_with_no_trailing_newline.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_listall.c_test_refs_listall__from_repository_with_no_trailing_newline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"bad_tag.git\00", align 1
@ref_list = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_listall__from_repository_with_no_trailing_newline() #0 {
  %1 = call i32 @cl_fixture(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @git_repository_open(i32* @repo, i32 %1)
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = load i32, i32* @repo, align 4
  %5 = call i32 @git_reference_list(%struct.TYPE_4__* @ref_list, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ref_list, i32 0, i32 0), align 8
  %8 = icmp sgt i64 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @cl_assert(i32 %9)
  %11 = call i32 @git_strarray_free(%struct.TYPE_4__* @ref_list)
  %12 = load i32, i32* @repo, align 4
  %13 = call i32 @git_repository_free(i32 %12)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_open(i32*, i32) #1

declare dso_local i32 @cl_fixture(i8*) #1

declare dso_local i32 @git_reference_list(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_strarray_free(%struct.TYPE_4__*) #1

declare dso_local i32 @git_repository_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
